src/app/components/about/about.component.scss
$dark-color: #543310;
$section-padding: 90px;

.container-xl {
  padding-top: $section-padding;
  padding-bottom: $section-padding;
  .slide {
    display: flex;
    gap: 30px;
    div {
      width: calc(50% - 15px);
    }
    img {
      object-fit: cover;
      width: 100%;
      height: 100%;
    }
    p {
      color: $dark-color;
      font-size: 18px;
      line-height: 1.4;
      letter-spacing: 0.045rem;
    }
  }
}

@media (max-width: 767px) {
  .slide {
    flex-direction: column;
    gap: 24px;
    div {
      width: 100% !important;
    }
    &:last-of-type {
      div:first-child {
        order: 2;
      }
    }
  }
}

